force-app/main/default/objects/Redeem_Product__c/Redeem_Product__c.object-meta.xml
<CustomObject>
    <label>Redeem Product</label>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Redeem Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redeem Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>