force-app/main/default/objects/Redeem_Product__c/fields/Event_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Event_Attendee__c</fullName>
    <label>Event Attendee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>