force-app/main/default/objects/Redeem_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Redeem Products</relationshipLabel>
    <relationshipName>Redeem_Products</relationshipName>
    <type>Lookup</type>
</CustomField>